adding new data

--- a/results/index.html
+++ b/results/index.html
@@ -9,9 +9,9 @@
 
     <select name="inputdata" id="inputdata">
         <option value="ELAPSED_TIME_SECONDS">Elapsed time (seconds)</option>
+        <option value="MAX_RES_SIZE_KB">Max Res Size (Memory) in KB</option>
         <option value="CPU_SECONDS_USED">CPU Seconds Used</option>
         <option value="CONTEXT_SWITCHES">Context Switches</option>
-        <option value="FS_INPUTS">File System Inputs</option>
         <option value="FS_OUTPUTS">File System Outputs</option>
         <option value="PERC_CPU_ALLOCATED">Percent CPU Allocated</option>
     </select>
