--- a/results/index.html
+++ b/results/index.html
@@ -1,29 +1,53 @@
 <html>
 <head>
-    <title>HPC vs. Cloud</title>
+    <title>Container Analysis: HPC vs. Cloud</title>
     <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Roboto:300,300italic,700,700italic">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/milligram.min.css">
+    <style>
+    .vanessa_icon {
+        border-radius:30px !important;
+        font-size:32 !important;
+        font-weight:600 !important;
+        padding:0px 10px 0px 10px !important;
+    }
+    </style>
 </head>
 <body>
 
 <div class="container" style="padding-top:20px">
-    <h1>HPC vs. Cloud</h1>
+    <div class="row">
+        <div class="column">
+            <h2>Container Analysis: HPC vs. Cloud</h2>
 
-    <fieldset>
-        <label for="inputdata">Metric</label>
-        <select name="inputdata" id="inputdata">
-            <option value="ELAPSED_TIME_SECONDS">Elapsed time (seconds)</option>
-            <option value="MAX_RES_SIZE_KB">Max Res Size (Memory) in KB</option>
-            <option value="CPU_SECONDS_USED">CPU Seconds Used</option>
-            <option value="CONTEXT_SWITCHES">Context Switches</option>
-            <option value="FS_OUTPUTS">File System Outputs</option>
-            <option value="PERC_CPU_ALLOCATED">Percent CPU Allocated</option>
-        </select>
-    </fieldset>
-
+            <fieldset>
+                <label for="inputdata">Metric</label>
+                <select name="inputdata" id="inputdata">
+                    <option value="ELAPSED_TIME_SECONDS">Elapsed time (seconds)</option>
+                    <option value="MAX_RES_SIZE_KB">Max Res Size (Memory) in KB</option>
+                    <option value="CPU_SECONDS_USED">CPU Seconds Used</option>
+                    <option value="CONTEXT_SWITCHES">Context Switches</option>
+                    <option value="FS_OUTPUTS">File System Outputs</option>
+                    <option value="PERC_CPU_ALLOCATED">Percent CPU Allocated</option>
+                </select>
+            </fieldset>
+        </div>
+    </div>
     <div id="plot"></div>
+    <div class="row" style="padding-top:50px">
+        <a id="toggleme" class="button vanessa_icon">?</a>
+        <div id="showme" class="column hidden" style="display:none">
+            <p>This project aimed to be a simple comparison of running a simple <a href="https://www.github.com/vsoch/singularity-scientific-example" target="_blank">analysis pipeline</a> on both cloud (<a href="https://aws.amazon.com/ec2" target="_blank">AWS</a>,<a href="https://cloud.google.com/compute/" target="_blank">GCE</a>) and local compute (<a href="https://sherlock.stanford.edu" target="_blank">sherlock</a>,<a href="https://srcc.stanford.edu/scg-genomics-clusters" target="_blank">scg4</a> resources. Each deployed the analysis by way of a <a href="https://singularity-hub.org/collections/41/" target="_blank">Singularity</a> from <a href="https://singularity-hub.org" target="_blank">Singularity Hub</a>, and cloud resources that allow the user to be a superuser also deployed the equivalent analysis in <a href="https://hub.docker.com/r/vanessa/singularity-scientific-example/" target="_blank">Docker container</a>. For more information about the analysis and runs, please see the <a href="https://www.github.com/vsoch/singularity-scientific-example" target="_blank">code base on Github, and expect details and discussion in an upcoming manuscript.</a>
+            </p>
+        </div>
+    </div>
 
+    <div class="clearfix">
+
+        <!-- Float either directions -->
+        <div class="float-right"></div>
+
+    </div>
     <!-- Empty 
         <option value="AVG_RESIDENT_SET_SIZE">Average resident set size</option>
         <option value="NUMBER_SIGNALS_DELIVERED">Number of Signals Delivered</option>
@@ -57,6 +81,17 @@ function load_data(dataname) {
 
 $(document).ready(function(){
    load_data('ELAPSED_TIME_SECONDS');
+
+   // Show info if user wants to see it
+   $("#toggleme").click(function(){
+      if ($("#showme").hasClass("hidden")){
+          $("#showme").removeClass('hidden');
+          $("#showme").show();
+      } else {
+          $("#showme").addClass('hidden');
+          $("#showme").hide();
+      }
+   })
 
    // Load the new data when the user selects it
    $("#inputdata").change(function(){
