modified:   results/metric.html

--- a/results/metric.html
+++ b/results/metric.html
@@ -38,7 +38,7 @@
             <fieldset>
                 <label for="metric">Metric</label>
                 <select name="metric" id="metric">
-                    <option value="ELAPSED_TIME_SECONDS">Elapsed time (seconds)</option>
+                    <option value="ELAPSED_TIME_SEC">Elapsed time (seconds)</option>
                     <option value="MAX_RES_SIZE_KB">Max Res Size (Memory) in KB</option>
                     <option value="CPU_SECONDS_USED">CPU Seconds Used</option>
                     <option value="CONTEXT_SWITCHES">Context Switches</option>
